--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/react": "18.2.31",
+    "@types/react-dom": "18.2.14",
+    "@types/three": "0.156.0",
+    "@vitejs/plugin-react": "4.3.4",
     "vite": "^6.0.6"
   },
   "dependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "three": "0.152.2",
     "uuid": "^11.0.4"
   }
 }
