--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "6.18.0",
     "three": "0.152.2",
     "uuid": "^11.0.4"
   }
