--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vite": "^6.0.6"
   },
   "dependencies": {
+    "firebase": "10.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.18.0",
