fixed firestrore errors

--- a/firebase.json
+++ b/firebase.json
@@ -2,6 +2,18 @@
   "hosting": {
     "site": "thebimdesk",
 
-    "public": "public"
+    "public": "public",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
